--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "pisak",
     "version": "1.0.0",
     "dependencies": {
-        "lodash": ">=4.13.1",
-        "require": ">=2.2.0"
+        "lodash": ">=4.13.1"
     }
 }
