--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,3 @@
 [DEFAULT]
-Depends3: python3-pyqt5, python3-pyqt5.qtmultimedia, python3-pyqt5.qtquick, qtdeclarative5-controls-plugin,
-qtdeclarative5-models-plugin, qtdeclarative5-folderlistmodel-plugin, qtdeclarative5-qtmultimedia-plugin,
-qtdeclarative5-qtquick2-plugin, qtdeclarative5-quicklayouts-plugin, qtdeclarative5-settings-plugin,
-qtdeclarative5-window-plugin
+Depends3: python3-pyqt5, python3-pyqt5.qtmultimedia, python3-pyqt5.qtquick
+X-Python3-Version: >= 3.5
