--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,3 +1,3 @@
 [DEFAULT]
-Depends3: python3-pyqt5, python3-pyqt5.qtmultimedia, python3-pyqt5.qtquick
+Depends3: python3-pyqt5, python3-pyqt5.qtmultimedia, python3-pyqt5.qtquick, qtdeclarative5-qtmultimedia-plugin, qtdeclarative5-controls-plugin
 X-Python3-Version: >= 3.5
